--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,4 +14,4 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
       - name: Build with Maven
-        run: mvnw -B verify -Dspring.profiles.active=ci
+        run: mvn -B verify -Dspring.profiles.active=ci
