--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,8 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
+      - name: Build with Maven
+        run: mvn -B verify -Dspring.profiles.active=ci
       - name: Cache Maven packages
         uses: actions/cache@v1
         with:
